test-cases/final-dump/generic_resource.exp
Error detected during preliminary processing of module generic_resource
final-dump/generic_resource.wybe:1:1: Resource type cannot contain type variables: list(F00)
